@@ -17,6 +17,7 @@ c - crash     b - bug fix    e - enhancement    f - new feature  n - note
       at install time. The file only shows examples and a link to the
       TORQUE documentation. This enhancement was first committed to trunk.
   c - fix pbs_server crash from invalid qsub -t argument
+  b - fix so blcr checkpoint jobs work correctly when put on hold
 
 
 2.5.1
